Makefile now uses CFLAGS properly

--- a/sw/lib/ocaml/ivy/Makefile
+++ b/sw/lib/ocaml/ivy/Makefile
@@ -17,7 +17,7 @@ OCAMLFLAGS =
 endif
 
 OCAMLOPTFLAGS=
-CFLAGS=-Wall
+CFLAGS+=-Wall
 OCAMLINC=-I `ocamlc -where`
 GLIBINC=`pkg-config --cflags glib-2.0`
 
