--- a/conf/Makefile.lpc21
+++ b/conf/Makefile.lpc21
@@ -32,7 +32,7 @@
 SRC_ARCH = arch/lpc21
 
 # Define programs and commands.
-HAVE_ARM_NONE_EABI_GCC := $(wildcard /usr/bin/arm-none-eabi-gcc)
+HAVE_ARM_NONE_EABI_GCC := $(shell which arm-none-eabi-gcc)
 ifeq ($(strip $(HAVE_ARM_NONE_EABI_GCC)),)
 CC		= arm-elf-gcc
 LD		= $(CC)
