--- a/conf/Makefile.stm32
+++ b/conf/Makefile.stm32
@@ -38,7 +38,7 @@ OPT   = s
 #OPT   = 0
 
 # Programs location
-TOOLCHAIN_DIR=/opt/paparazzi/stm32
+TOOLCHAIN_DIR=$(shell find -L /opt/paparazzi/stm32 ~/sat -maxdepth 1 -type d -name arm-none-eabi 2>/dev/null | head -n 1 | xargs dirname )
 GCC_BIN_DIR=$(TOOLCHAIN_DIR)/bin
 GCC_LIB_DIR=$(TOOLCHAIN_DIR)/arm-none-eabi/lib
 
