--- a/sw/tools/Makefile
+++ b/sw/tools/Makefile
@@ -24,7 +24,7 @@ Q=@
 
 OCAML=ocaml
 OCAMLC=ocamlc
-INCLUDES=-I ../lib/ocaml $(shell ocamlfind query -r -i-format xml-light)
+INCLUDES=-I ../lib/ocaml $(shell ocamlfind query -r -i-format xml-light) -I .
 OCAMLNETINCLUDES=$(shell ocamlfind query -r -i-format netstring)
 OCAMLNETCMA=$(shell ocamlfind query -r -a-format -predicates byte netstring)
 OCAMLLEX=ocamllex
@@ -42,13 +42,13 @@ gen_flight_plan.out : $(FP_CMO) ../lib/ocaml/lib-pprz.cma
 fp_proc.cmo : fp_proc.cmi
 gen_flight_plan.cmo : fp_proc.cmi
 
+gen_common.cmo : gen_common.cmi
 
-
-%.out : %.ml Makefile
+%.out : %.ml gen_common.ml Makefile
 	@echo OC $<
 	$(Q)$(OCAMLC) $(INCLUDES) -o $@ unix.cma str.cma ivy-ocaml.cma xml-light.cma lib-pprz.cma gen_common.cmo $<
 	@cat ../../pprz_src_test.sh > $@
-	@echo '$(OCAML) $(shell ocamlfind query -r -i-format xml-light) $(OCAMLNETINCLUDES) -I $$PAPARAZZI_SRC/sw/lib/ocaml unix.cma str.cma ivy-ocaml.cma xml-light.cma $(OCAMLNETCMA) lib-pprz.cma $$PAPARAZZI_BIN/$< $$*' >> $@
+	@echo '$(OCAML) -I $$PAPARAZZI_SRC/sw/tools $(shell ocamlfind query -r -i-format xml-light) $(OCAMLNETINCLUDES) -I $$PAPARAZZI_SRC/sw/lib/ocaml unix.cma str.cma ivy-ocaml.cma xml-light.cma $(OCAMLNETCMA) lib-pprz.cma gen_common.cmo $$PAPARAZZI_BIN/$< $$*' >> $@
 	@chmod a+x $@
 
 %.cmo : %.ml ../lib/ocaml/lib-pprz.cma
