use ocamlfind to find include path for camlimages, lablGL  and labgtk2 in in visu3d  makefile

--- a/sw/ground_segment/visu3d/Makefile
+++ b/sw/ground_segment/visu3d/Makefile
@@ -1,5 +1,5 @@
 OCAMLOPT0 = ocamlopt
-OCAMLC    = ocamlc -I +xml-light
+OCAMLC    = ocamlc $(shell ocamlfind query -r -i-format xml-light)
 
 MLFLAGS   =  $(shell ocamlfind query -r -i-format lablGL)  $(shell ocamlfind query -r -i-format lablgtk2) $(shell ocamlfind query -r -i-format camlimages) -I ../../lib/ocaml
 
