--- a/conf/conf.xml.example
+++ b/conf/conf.xml.example
@@ -90,7 +90,6 @@
    settings="settings/tuning_ins.xml"
    gui_color="blue"
   />
-
   <aircraft
     name="Twinjet"
     ac_id="6"
@@ -101,17 +100,15 @@
     settings="settings/tuning.xml"
     gui_color="#ba6293"
   />
-
- <!-- demo module -->
   <aircraft
-    name="DM"
+    name="EasyStar_ETS"
     ac_id="8"
-    airframe="airframes/demo_module.xml"
+    airframe="airframes/easystar_ets_example.xml"
     radio="radios/cockpitSX.xml"
     telemetry="telemetry/default.xml"
-    flight_plan="flight_plans/demo_module.xml"
-    settings="settings/basic.xml"
-    gui_color="white"
+    flight_plan="flight_plans/versatile.xml"
+    settings="settings/tuning.xml"
+    gui_color="red"
   />
 
 </conf>
