--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 *.out
 
 *~
+*.swp
 
 *.pyc
 
@@ -15,6 +16,24 @@
 *.depend
 
 *.aux
+
+# Debian related files
+*.deb
+*.dsc
+*.changes
+*.substvars
+*.debhelper.log
+*-stamp
+/debian/control
+/debian/changelog
+/debian/files
+/debian/paparazzi-arm7
+/debian/paparazzi-avr
+/debian/paparazzi-dev
+/debian/paparazzi-bin
+/sw/lib/ocaml/ivy/debian/changelog
+/sw/lib/ocaml/ivy/debian/files
+/sw/lib/ocaml/ivy/debian/ivy-ocaml
 
 /var
 /dox
@@ -89,3 +108,17 @@
 # /sw/tools/
 /sw/tools/fp_parser.ml
 /sw/tools/wiki_gen/wiki_gen
+
+# /sw/ground_segment/joystick
+/sw/ground_segment/joystick/test_stick
+
+# /sw/airborne/arch/lpc21/test/bootloader
+/sw/airborne/arch/lpc21/test/bootloader/bl.dmp
+/sw/airborne/arch/lpc21/test/bootloader/bl.hex
+/sw/airborne/arch/lpc21/test/bootloader/bl.map
+/sw/airborne/arch/lpc21/test/bootloader/bl.elf
+/sw/airborne/arch/lpc21/test/bootloader/bl_ram.dmp
+/sw/airborne/arch/lpc21/test/bootloader/bl_ram.hex
+/sw/airborne/arch/lpc21/test/bootloader/bl_ram.map
+/sw/airborne/arch/lpc21/test/bootloader/bl_ram.elf
+/sw/airborne/arch/lpc21/test/bootloader/crt.lst
