--- a/conf/Makefile.stm32
+++ b/conf/Makefile.stm32
@@ -38,7 +38,7 @@ OPT   = s
 #OPT   = 0
 
 # Programs location
-TOOLCHAIN_DIR=$(shell find -L /opt/paparazzi/stm32 ~/sat -maxdepth 1 -type d -name arm-none-eabi 2>/dev/null | head -n 1 | xargs dirname )
+TOOLCHAIN_DIR=$(shell find -L ~/sat /opt/paparazzi/stm32 -maxdepth 1 -type d -name arm-none-eabi 2>/dev/null | head -n 1 | xargs dirname )
 GCC_BIN_DIR=$(TOOLCHAIN_DIR)/bin
 GCC_LIB_DIR=$(TOOLCHAIN_DIR)/arm-none-eabi/lib
 
@@ -154,10 +154,9 @@ printcommands:
 	@echo "Using CC   = $(CC)"
 	@echo "Using LD   = $(LD)"
 	@echo "Using CP   = $(CP)"
-	@echo "Using DMP   = $(DMP)"
+	@echo "Using DMP  = $(DMP)"
 	@echo "Using NM   = $(NM)"
 	@echo "Using SIZE = $(SIZE)"
-	@echo "Using RM   = $(RM)"
 	@echo "Using OOCD = $(OOCD)"
 
 build: elf bin hex
