--- a/.gitignore
+++ b/.gitignore
@@ -116,6 +116,7 @@
 
 # /sw/ground_segment/misc
 /sw/ground_segment/misc/davis2ivy
+/sw/ground_segment/misc/kestrel2ivy
 
 
 # /sw/airborne/arch/lpc21/test/bootloader
