--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,7 @@
 /conf/%gconf.xml
 /conf/srtm_data/*
 /conf/maps_data/*
+/conf/gps/ublox_conf
 
 # /doc/pprz_algebra/
 /doc/pprz_algebra/headfile.log
@@ -99,6 +100,7 @@
 /sw/logalizer/plotter
 /sw/logalizer/gtk_export.ml
 /sw/logalizer/sd2log
+/sw/logalizer/plotprofile
 
 # /sw/simulator/
 /sw/simulator/gaia
