updated .gitignore for maps.xml, deleted maps.xml, fixed typo in data/maps/Makefile

--- a/data/maps/Makefile
+++ b/data/maps/Makefile
@@ -14,4 +14,4 @@ $(PAPARAZZI_HOME)/conf/maps.xml: $(DATADIR)/maps.google.com
 	$(Q)echo "<maps google_version=\""`grep -P "http://khm[0-9]+.google.com/kh/v=[0-9]+.x26" $(DATADIR)/maps.google.com | sed -E s#.*http://khm[0-9]+.google.com/kh/v=## | sed -E s#.x26.*##`"\"/>" >> $(@)
 	$(Q)echo "" >> $(@)
 
-Force:
+FORCE:
