fix echo for systems where -e is not default, e.g. debian

--- a/data/maps/Makefile
+++ b/data/maps/Makefile
@@ -10,8 +10,8 @@ $(DATADIR)/maps.google.com: $(DATADIR) FORCE
 	wget -O $(@) http://maps.google.com/
 
 $(PAPARAZZI_HOME)/conf/maps.xml: $(DATADIR)/maps.google.com
-	$(Q)echo "<!DOCTYPE maps SYSTEM \"maps.dtd\">\n" > $(@)
-	$(Q)echo "<maps google_version=\""`grep -P "http://khm[0-9]+.google.com/kh/v=[0-9]+.x26" $(DATADIR)/maps.google.com | sed -E s#.*http://khm[0-9]+.google.com/kh/v=## | sed -E s#.x26.*##`"\"/>" >> $(@)
-	$(Q)echo "" >> $(@)
+	$(Q)echo -e "<!DOCTYPE maps SYSTEM \"maps.dtd\">\n" > $(@)
+	$(Q)echo -e "<maps google_version=\""`grep -P "http://khm[0-9]+.google.com/kh/v=[0-9]+.x26" $(DATADIR)/maps.google.com | sed -E s#.*http://khm[0-9]+.google.com/kh/v=## | sed -E s#.x26.*##`"\"/>" >> $(@)
+	$(Q)echo -e "" >> $(@)
 
 FORCE:
