--- a/.gitignore
+++ b/.gitignore
@@ -59,6 +59,8 @@
 /sw/ground_segment/cockpit/gtk_setting_time.ml
 /sw/ground_segment/cockpit/gcs
 /sw/ground_segment/cockpit/gtk_strip.ml
+/sw/ground_segment/cockpit/ant_track
+
 
 # /sw/ground_segment/lpc21iap/
 /sw/ground_segment/lpc21iap/lpc21iap
@@ -80,10 +82,14 @@
 /sw/ground_segment/tmtc/ivy2udp
 /sw/ground_segment/tmtc/server
 /sw/ground_segment/tmtc/diadec
+/sw/ground_segment/tmtc/GSM/SMS_GS
 
 # /sw/ground_segment/joystick
 /sw/ground_segment/joystick/input2ivy
 /sw/ground_segment/joystick/test_stick
+
+/sw/in_progress/fdm/fdm_step
+/sw/in_progress/fdm/fms_steps_attitude
 
 # /sw/lib/ocaml/
 /sw/lib/ocaml/gtk_papget_editor.ml
@@ -102,6 +108,13 @@
 /sw/logalizer/gtk_export.ml
 /sw/logalizer/sd2log
 /sw/logalizer/plotprofile
+/sw/logalizer/ahrsview
+/sw/logalizer/ctrlstick
+/sw/logalizer/ffjoystick
+/sw/logalizer/imuview
+/sw/logalizer/ivy_example
+/sw/logalizer/motor_bench
+/sw/logalizer/tmclient
 
 # /sw/simulator/
 /sw/simulator/gaia
