remove compiler warnings about functions that can't be inlined for lpc based builds

--- a/conf/Makefile.lpc21
+++ b/conf/Makefile.lpc21
@@ -87,7 +87,7 @@ CINCS = $(INCLUDES) -I $(SRC_ARCH)/include
 CFLAGS = $(CINCS)
 CFLAGS += -O$(OPT)
 # CFLAGS += -malignment-traps
-CFLAGS += -Wall -Wcast-qual -Wimplicit -Wcast-align -Winline
+CFLAGS += -Wall -Wcast-qual -Wimplicit -Wcast-align
 CFLAGS += -Wpointer-arith -Wswitch
 CFLAGS += -Wredundant-decls -Wreturn-type -Wshadow -Wunused
 CFLAGS += -Wa,-adhlns=$(OBJDIR)/$(notdir $(subst $(suffix $<),.lst,$<))
