--- a/conf/Makefile.lpc21
+++ b/conf/Makefile.lpc21
@@ -34,7 +34,7 @@ SRC_ARCH = arch/lpc21
 
 # Programs location
 # try to find the paparazzi multilib toolchain
-TOOLCHAIN_DIR=$(shell find -L ~/sat /opt/paparazzi/stm32 -maxdepth 1 -type d -name arm-none-eabi 2>/dev/null | head -n 1 | xargs dirname )
+TOOLCHAIN_DIR=$(shell find -L ~/sat /opt/paparazzi/arm-multilib /opt/paparazzi/stm32 -maxdepth 1 -type d -name arm-none-eabi 2>/dev/null | head -n 1 | xargs dirname )
 
 #
 # found the new paparazzi toolchain, use it
