use detected openocd binary for start_gdb

--- a/conf/Makefile.stm32
+++ b/conf/Makefile.stm32
@@ -254,8 +254,8 @@ endif
 
 start_gdb:
 	xterm -e "$(OOCD) -f interface/$(OOCD_INTERFACE).cfg  -f target/$(OOCD_TARGET).cfg" &
-	xterm -e "/opt/paparazzi/stm32/bin/openocd -f interface/lisa-l.cfg -f board/lisa-l.cfg"&
-	xterm -e "/opt/paparazzi/stm32/bin/openocd -f interface/flossjtag.cfg -f board/lisa-l.cfg"&
+	xterm -e "$(OOCD) -f interface/lisa-l.cfg -f board/lisa-l.cfg"&
+	xterm -e "$(OOCD) -f interface/flossjtag.cfg -f board/lisa-l.cfg"&
 
 start_telnet:
 	xterm -e "telnet localhost 4444" &
