--- a/conf/Makefile.lpc21
+++ b/conf/Makefile.lpc21
@@ -34,7 +34,7 @@ SRC_ARCH = arch/lpc21
 
 # Programs location
 # try to find the paparazzi multilib toolchain
-TOOLCHAIN_DIR=$(shell find -L ~/sat /opt/paparazzi/arm-multilib /opt/paparazzi/stm32 -maxdepth 1 -type d -name arm-none-eabi 2>/dev/null | head -n 1 | xargs dirname )
+TOOLCHAIN_DIR=$(shell find -L /opt/paparazzi/arm-multilib ~/sat -maxdepth 1 -type d -name arm-none-eabi 2>/dev/null | head -n 1 | xargs dirname )
 
 #
 # found the new paparazzi toolchain, use it
@@ -52,7 +52,7 @@ SIZE    = $(GCC_BIN_PREFIX)-size
 OOCD    = $(TOOLCHAIN_DIR)/bin/openocd
 
 #
-# If we can't find the toolchain (in ~/sat or /opt/paparazzi/stm32) then try picking up the compilers from the path
+# If we can't find the toolchain (in /opt/paparazzi/arm-multilib or ~/sat) then try picking up the compilers from the path
 #
 else
 
